syntax = "proto3";

package vcassist.services.sis.v1;

import "vcassist/services/sis/v1/data.proto";
import "vcassist/services/keychain/v1/auth_flow.proto";

// ProvideCredential
message ProvideCredentialRequest {
  oneof credential {
    vcassist.services.keychain.v1.OAuthTokenProvision token = 1;
    vcassist.services.keychain.v1.UsernamePasswordProvision username_password = 2;
  }
}
message ProvideCredentialResponse {}

message Data {
  StudentProfile profile = 1;
  repeated SchoolData schools = 2;
  repeated Bulletin bulletins = 3;
  repeated CourseData courses = 4;
}

// GetData
message GetDataRequest {}
message GetDataResponse {
  Data data = 1;
}

// RefreshData
message RefreshDataRequest {}
message RefreshDataResponse {
  Data data = 1;
}

// SIS stands for "school information service"
service SIService {
  rpc ProvideCredential(ProvideCredentialRequest) returns (ProvideCredentialResponse);
  rpc GetData(GetDataRequest) returns (GetDataResponse);
  rpc RefreshData(RefreshDataRequest) returns (RefreshDataResponse);
}
